==> kreyosopensource/KreyosFirmware/Watch/platform/iwatch/spiflash.c <==
#include "contiki.h"
#include <stdio.h>
#include "sys/rtimer.h"
#include "isr_compat.h"
#include "spiflash.h"
#define DEBUG 0
#include <stdio.h>
#define PRINTF(...) printf(__VA_ARGS__)
#define PRINTF(...)
#define hexdump(...)

static inline uint8_t SPI_FLASH_SendByte( uint8_t data )
{
  UCA1TXBUF = data;
  while(( UCA1IFG & UCRXIFG ) == 0x00 ); // Wait for Rx completion (implies Tx is also complete)
  return( UCA1RXBUF );
}

static inline void SPI_FLASH_CS_LOW()
{
  UCA1CTL1 &= ~UCSWRST;
  SPIOUT &= ~CSPIN;
}

static inline void SPI_FLASH_CS_HIGH()
{
  while(UCA1STAT & UCBUSY);
  UCA1CTL1 |= UCSWRST;
  SPIOUT |= CSPIN;
  __delay_cycles(10);
}

void SPI_FLASH_Init(void)
{
  // init SPI
  UCA1CTL1 = UCSWRST;

  UCA1CTL0 |= UCMST + UCSYNC + UCMSB + UCCKPL; // master, 3-pin SPI mode, LSB //UCCKPH
  UCA1CTL1 |= UCSSEL__SMCLK; // SMCLK for now
  UCA1BR0 = 4; // 8MHZ / 4 = 2Mhz
  UCA1BR1 = 0;
  UCA1MCTL = 0;

  //Configure ports.
  CLKDIR |= CLKPIN;
  CLKSEL |= CLKPIN;
  CLKOUT &= ~CLKPIN;

  SPIDIR |= SIPIN | CSPIN;
  SPIDIR &= ~SOPIN; // SO is input
  SPISEL |= SIPIN | SOPIN;
  SPIOUT &= ~SIPIN;
  SPIOUT |= CSPIN; // pull CS high to disable chip

  //SPI_Flash_Reset();

  printf("\n$$OK SPIFLASH\n");
#if 1
  uint8_t FLASH_Status;
  SPI_FLASH_CS_LOW();
  /*发送读状态指令 */
  SPI_FLASH_SendByte(W25X_ReadStatusReg);
  /* 发送空字节 */
  FLASH_Status = SPI_FLASH_SendByte(Dummy_Byte);
  /*失能片选*/
  SPI_FLASH_CS_HIGH();
  printf("status register 1 = %x ", FLASH_Status);

  SPI_FLASH_CS_LOW();
  /*发送读状态指令 */
  SPI_FLASH_SendByte(W25X_ReadStatusReg2);
  /* 发送空字节 */
  FLASH_Status = SPI_FLASH_SendByte(Dummy_Byte);
  /*失能片选*/
  SPI_FLASH_CS_HIGH();
  printf("status register 2 = %x ", FLASH_Status);  
#endif
  printf("Find SPI Flash DeviceId = %x\n", (uint16_t)SPI_FLASH_ReadDeviceID());

//  SPI_FLASH_BulkErase();
}
