==> howard0su/iwatch/platform/efm32/spiflash.c <==
#include "contiki.h"
#include <stdio.h>
#include "sys/rtimer.h"
#include "platform-conf.h"
#include "spiflash.h"
#define DEBUG 1
#include <stdio.h>
#define PRINTF(...) printf(__VA_ARGS__)
#define hexdump(...)
#define PRINTF(...)
#define hexdump(...)
#define SFLASH_DO		0
#define SFLASH_DI		1
#define SFLASH_CLK		2
#define SFLASH_SCS		3

static inline uint8_t SPI_FLASH_SendByte( uint8_t data )
{
	USART_Tx(spi, data);
	return USART_Rx(spi);
}

static inline void SPI_FLASH_CS_LOW()
{
	GPIO_PinOutClear(gpioPortD, SFLASH_SCS);	//SET SFLASH_SCS be 0(low)
}

static inline void SPI_FLASH_CS_HIGH()
{	
	GPIO_PinOutSet(gpioPortD, SFLASH_SCS);
}

void SPI_FLASH_Init(void)
{
	printf("Init SPIflash\n");
	/* SPI flash port/pin configuration */
	/* Pin PD0 is configure to Push-pull as SPI_DO. To avoid false start, configure output as high  */	
  	GPIO_PinModeSet(gpioPortD, SFLASH_DO, gpioModePushPull, 1);  	
  	/* Pin PD1 is configured to Input enabled as SPI_DI */
  	GPIO_PinModeSet(gpioPortD, SFLASH_DI, gpioModeInput, 0);  	
  	/* Pin PD2 is configured to Input enabled as SPI_SCLK */
  	GPIO_PinModeSet(gpioPortD, SFLASH_CLK, gpioModePushPull, 0);  	
  	/* Pin PD3 is configure to Push-pull as SPI_SCS. To avoid false start, configure output as high  */	
  	GPIO_PinModeSet(gpioPortD, SFLASH_SCS, gpioModePushPull, 1);  
  	
	/* Enable clock for USART1 */
  	CMU_ClockEnable(cmuClock_USART1, true);
  	/* Custom initialization for USART1 */
  	USART1_setup(); 
  	
  	/* Clearing old transfers/receptions, and disabling interrupts */
  	USART1->CMD = USART_CMD_CLEARRX | USART_CMD_CLEARTX;
  	USART1->IEN = 0;
  	//USART1->CTRL |= USART_CTRL_AUTOCS;	//
  	/* Module USART1 is configured to location 1 */
  	USART1->ROUTE = (USART1->ROUTE & ~_USART_ROUTE_LOCATION_MASK) | USART_ROUTE_LOCATION_LOC1;
  	/* Enable signals TX, RX, CLK, CS */
  	USART1->ROUTE |= USART_ROUTE_TXPEN | USART_ROUTE_RXPEN | USART_ROUTE_CLKPEN ;
  	
    	
    	/* Enabling Master, TX and RX */
    	USART1->CMD   = USART_CMD_MASTEREN | USART_CMD_TXEN | USART_CMD_RXEN;	
    	
    	/* Clear previous interrupts */
  	USART1->IFC = _USART_IFC_MASK;
	Rx_RAW_Flag = 0;
  	//SPI_Flash_Reset();

  	PRINTF("\n$SPIFLASH OK$\n");

	uint8_t FLASH_Status;
	uint8_t FLASH_ID;
  	SPI_FLASH_CS_LOW();
  	
  	
  	SPI_FLASH_SendByte(W25X_ReadStatusReg);
 	FLASH_Status = SPI_FLASH_SendByte(Dummy_Byte);
  
  	SPI_FLASH_CS_HIGH();
  	PRINTF("status register 1 = %x \n", FLASH_Status);

  	SPI_FLASH_CS_LOW();
  	
  	FLASH_Status = SPI_FLASH_SendByte(Dummy_Byte);
  
  	SPI_FLASH_CS_HIGH();
  	PRINTF("status register 2 = %x \n", FLASH_Status);  

	FLASH_ID = (uint8_t)SPI_FLASH_ReadDeviceID();
  	PRINTF("Find SPI Flash DeviceId = %2x \n", FLASH_ID);


}
